<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu_button_container"
    android:orientation="vertical" android:layout_width="match_parent"
    android:weightSum="7"
    android:layout_height="match_parent">

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/survivar"
        style="@style/AppTheme.Text"
        android:textSize="65sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"/>

    <com.google.android.material.button.MaterialButton
        android:layout_weight="1"
        android:id="@+id/button_new_game"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/new_game"/>

    <com.google.android.material.button.MaterialButton
        android:layout_weight="1"
        android:id="@+id/button_select_abilities_main"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/select_abilities"/>

    <com.google.android.material.button.MaterialButton
        android:layout_weight="1"
        android:id="@+id/button_profile"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/profile"/>

    <com.google.android.material.button.MaterialButton
        android:layout_weight="1"
        android:id="@+id/button_high_scores"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/high_scores"/>

    <com.google.android.material.button.MaterialButton
        android:layout_weight="1"
        android:id="@+id/button_tutorial"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/tutorial"/>

    <com.google.android.material.button.MaterialButton
        android:layout_weight="1"
        android:id="@+id/button_resume_game"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:enabled="false"
        android:text="@string/resume_game"/>

</LinearLayout>