<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:background="@drawable/healthbar_nontarget_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_margin="32dp"
        android:id="@+id/profile_imageView_avatar"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_height="150dp"
        android:background="@mipmap/ic_launcher_round"
        android:contentDescription="@string/description_avatar"
        app:srcCompat="@android:color/transparent"
        tools:srcCompat="@android:drawable/sym_def_app_icon" />

    <LinearLayout
        android:id="@+id/profile_layout_top_horizontal"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/AppTheme.Text"
            android:id="@+id/profile_textView_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="40sp"
            android:gravity="center"
            android:text="@string/default_username" />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textSize="28sp"
        android:id="@+id/btn_change_username"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_username"/>
    <TextView
        style="@style/AppTheme.Text"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:id="@+id/profile_textView_games_played"
        android:textSize="28sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/games_played" />

    <TextView
        style="@style/AppTheme.Text"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:id="@+id/profile_textView_highest_score"
        android:textSize="28sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highest_score" />

    <com.google.android.material.button.MaterialButton
        android:padding="8dp"
        android:layout_margin="8dp"
        android:textSize="28sp"
        android:textAllCaps="false"
        android:id="@+id/profile_button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"/>

</LinearLayout>