<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu_button_container"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playerhpmaterial"
    android:gravity="center">

    <TextView
        android:layout_marginBottom="80dp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#FFF"
        android:background="#F000"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_completed"
        />

    <com.google.android.material.button.MaterialButton
        android:elevation="8dp"
        android:padding="16dp"
        android:id="@+id/button_next_level"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:textSize="28sp"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:text="@string/next_level"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_select_abilities"
        android:padding="16dp"
        android:elevation="8dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:text="@string/change_improve_abilities"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_exit"
        android:padding="16dp"
        android:elevation="8dp"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:textAllCaps="false"
        android:layout_width="300dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"/>

</LinearLayout>