<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_marginStart="24dp"
    android:background="@color/colorButtonBackground"
    android:layout_marginEnd="24dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_margin="8dp"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:text="@string/create_new_user"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
    </TextView>

    <EditText
        android:id="@+id/edt_thief_insert"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:id="@+id/input_layout_username"
        android:layout_height="wrap_content"
        android:hint="@string/username">
    <com.google.android.material.textfield.TextInputEditText
        android:lines="1"
        android:id="@+id/input_username"
        android:singleLine="true"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textSize="30sp"
        android:id="@+id/profile_button_create_user"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"/>

    <com.google.android.material.button.MaterialButton
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textSize="30sp"
        android:id="@+id/profile_button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"/>

</LinearLayout>