<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:elevation="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/healthbar_background"
    android:layout_height="wrap_content">

    <TextView
        style="@style/AppTheme.Text"
        android:id="@+id/textView_highScore_order"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/_1"
        />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            style="@style/AppTheme.Text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:id="@+id/textView_score_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_username" />

        <TextView
            style="@style/AppTheme.Text"
            android:textSize="20sp"
            android:id="@+id/textView_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_weight="1"
        android:layout_height="80dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

</LinearLayout>